# ruxy

./: Cargo.toml  rustfmt.toml
muxy-server/: Cargo.toml
muxy-server/src/: main.rs
ruxy-client/: Cargo.toml
ruxy-client/src/: error.rs  lib.rs
ruxy-server/: Cargo.toml
ruxy-server/src/: error.rs  lib.rs
src/: main.rs
